		Finance: fixed bug leading to invoice values changing (in print view only) after issue
		Finance: added reminder number to Email Reminder section header in overdue invoice edit view
		Finance: removed incorrectly applied currency label from expense export
		Formal Assessment: improved layout of Internal Assessment view
		Library: added new type to store Audio/Visual equipment
		Markbook: added a class average row to the bottom of markbook views (when Weighting is enabled)
		Markbook: fixed order for first markbook column not saving properly
		Markbook: allow decimal values for markbook column attainment raw max
		Markbook: fixed custom Attainment label for Total Mark field
		Markbook: added a markbook setting to enable display of cumulative marks on View Markbook and Student Profile pages
		Markbook: added a permission for teachers to only view their own markbook information
		Planner: adjusted permissions to allow teachers with Planner_viewAllEditMyClasses rights to view Unit Overview for classes they don't teach
		School Admin: fixed timezone issue in display of dates in Special Days view
		Students: added ability to store internal documents against student application forms
		Students: fixed bug preventing upload of application form documents when cookies disabled
		Students: fixed bug preventing some application form language/citizenship fields from not being saved
		Students: added settable thresholds for issuing academic alerts
		Students: added settable thresholds for issuing behaviour alerts
		Students: added extra action to allow deleting of application forms to be disabled
		Students: added optional permission for students to only view their profile
        Students: added data visualisation for student enrolment over time
        Students: fixed auto-assign houses potentially failing on Application Form acceptance if houses are empty
		Timetable: fixed TT not being navigable if user is not involved in any timetable